--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -4,8 +4,10 @@ workflows:
     scripts:
      -  name: CICD Started
         script: echo "Welcome to your CICD set up"
+    - name: Build To_do
+    script: xcodebuild build -workspace "To_Do.xcworkspace" -scheme "To_Do" CODE_SIGN_IDENTITY=""CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
     publishing:
         email:
             recipients:
-                - gu2003.mendonca48@gmail.com
+                gu2003.mendonca48@gmail.com
 
